[package]
name = "chemboy"
version = "0.0.1"
authors = ["simonwhitehead"]

[dependencies]
rand = "*"
image = "*"
gfx_core = "*"
gfx_device_gl = "*"
piston = "*"
piston2d-graphics = "0.23.0"
piston2d-opengl_graphics = "*"
piston_window = "*"
conrod = { version = "*", features = ["piston"] }

[dependencies.clap]
version = "2"

[dependencies.byteorder]
version = "0.5"
